--- a/style.css
+++ b/style.css
@@ -174,6 +174,8 @@ nav {
   
 
     .txt h1{
+
+        line-height: 100%;
         margin-top: 0;
         font-size: clamp(2rem, 2rem + 1vw, 3rem);
 
