--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ nav {
      }
 
      .img.e{
-        background: center/cover url(../images/projects/get.jpg) no-repeat;
+        background: center/cover url(./images/projects/get.jpg) no-repeat;
     }
 
     .icon{
